# ratify

./: .travis.yml  AUTHORS  AUTHORS.md  ChangeLog  Makefile.am  NEWS  README  README.md  annotation-glossary.html  api-index-deprecated.html  api-index.html  autogen.sh  configure.ac  index.html  meson.build  meson_options.txt  osxcart.pc.in  osxcart.spec  osxcart.spec.in  ratify-2-RTF-tools.html  ratify-api-reference.html  ratify.pc.in  ratify.spec
.github/workflows/: ci.yml  package.yml
debian/: .gitignore  changelog  control  copyright  docs  gir1.2-osxcartplist-0.install  gir1.2-osxcartrtf-0.install  libratify-2-dev.install  rules
docs/reference/: Makefile.am  gtkdoc-check-dummy.test  meson.build  osxcart-docs.sgml  ratify-docs.sgml  ratify-sections.txt
osxcart/: Makefile.am  init.c  init.h  plist-common.c  plist-common.h  plist-parser-oldglib.c  plist-parser.c  plist-write.c  plist.c  plist.h  rtf-colortbl.c  rtf-deserialize.c  rtf-deserialize.h  rtf-document.c  rtf-document.h  rtf-field.c  rtf-fonttbl.c  rtf-footnote.c  rtf-ignore.c  rtf-ignore.h  rtf-langcode.c  rtf-langcode.h  rtf-picture.c  rtf-serialize.c  rtf-serialize.h  rtf-state.c  rtf-state.h  rtf-stylesheet.c  rtf.c  rtf.h
po/: .gitignore  LINGUAS  Makevars  POTFILES.in  nl.po
ratify/: init.c  init.h  rtf-colortbl.c  rtf-deserialize.c  rtf-deserialize.h  rtf-document.c  rtf-document.h  rtf-field.c  rtf-fonttbl.c  rtf-footnote.c  rtf-ignore.c  rtf-ignore.h  rtf-langcode.c  rtf-langcode.h  rtf-picture.c  rtf-serialize.c  rtf-serialize.h  rtf-state.c  rtf-state.h  rtf-stylesheet.c  rtf.c  rtf.h
testcases/: DefaultText.rtf  Makefile.am  RtfInterpreterTest_1.rtf  RtfInterpreterTest_19.rtf  RtfInterpreterTest_2.rtf  RtfInterpreterTest_20.rtf  RtfInterpreterTest_21.rtf  Settings.plist  appledoc1.plist  appledoc2.plist  appledoc3.plist  appledoc4.plist  badlyformed.fail.plist  charscalex.rtf  charscalexfail.rtf  crazy_fonttable.rtf  extraneous_key.fail.plist  extraneous_object.fail.plist  incomplete.fail.plist  manifest.plist  missing_key.fail.plist  missing_version.fail.plist  missing_version.fail.rtf  notes.rtf  oneofeach.plist  outtake_crazy_fonttable.rtf  outtake_latin.rtf  outtake_simplicity.rtf  p004_hello_world.rtf  p005a_hello_world.rtf  p005b_hello_world.rtf  p005c_hello_world.rtf  p006a_hello_world.rtf  p006b_hello_world.rtf  p007_salvete_omnes.rtf  p014_annalum.rtf  p015_annalum.rtf  p018_annalum.rtf  p023_martial.rtf  p024_annalum.rtf  (+54 more)
testcases/rtfdtest.rtfd/: TXT.rtf
